update a few things

--- a/templates/mail.j2
+++ b/templates/mail.j2
@@ -1,3 +1,7 @@
+From: Paul Tagliamonte <paultag@gmail.com>
+To: iron-blogger-dc@googlegroups.com
+Subject: Iron Blogger report, week of {{when}}
+
 Good week, lovely iron-bloggers!
 
 This week, the following folks slacked:
