--- a/templates/config.ini.j2
+++ b/templates/config.ini.j2
@@ -7,7 +7,7 @@
 # owner_name: Your name
 # owner_email: Your e-mail address
 name = Planet Iron Blogger
-link = http://dc.iron-blogger.com/planet/
+link = https://dc.iron-blogger.com/planet/
 owner_name = Paul R. Tagliamonte
 owner_email = paultag@gmail.com
 
